/**
* Channel Data
* Author: Justin Kimbrell (Objective HTML)
* Version: 0.7.0
* Build: 20120711
* Copyright 2012 - All rights reserved
* http://objectivehtml.com
*/

Version 0.7.0 - 07/11/2012
--------------------------
- Added new tmpl driver that makes parsing FT tags much easier

Version 0.6.13 - 06/19/2012
---------------------------
- Attempted to fix another PHP 5.4 issue that wasn't fixed in the last update.
- Added a new reindex method that will convert an indexed array to an associative array by "re-indexing" it.

Version 0.6.12 - 06/19/2012
---------------------------
- Fixed a PHP 5.4 issue with the isset function not working correctly with variable variables.

Version 0.6.11 - 05/18/2012
---------------------------
- Added categories fields to the get_category_entries() method to be consistent with get_channel_entries() and get_members(). The get_categories method was maintained for legacy support.
- Added prepare_entry(), submit_entry(), and update_entry() convenience methods to the data manipulation utility
- Fixed bug with the get_channel_entries returning invalid field names for ambigious fields

Version 0.6.10 - 04/18/2012
---------------------------
- Properly escaped the WHERE and HAVING values for single quotes and SQL injection attacks.

Version 0.6.9 - 04/05/2012
-------------------------
- Fixed a pretty critical bug that prevented multiple WHERE clauses from working in the get_channel_entries method.

Version 0.6.8 - 03/30/2012
-------------------------
- HAVING clauses now have all the same capabilities as WHERE clauses.
- Added a new method to the utility classes that merges two results_arrays into one array ready for template parsing.


Version 0.6.7 - 2/28/2012
-------------------------
Fixed an issue with polymorphic parameters not searching arguments in the correct order. Also added ability to search same parameter in associative array by added an index.


Version 0.6.6 - 2/24/2012
-------------------------